--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
           git push
   build:
     runs-on: ubuntu-latest
+    needs: crawl
     steps:
       - name: Checkout
         uses: actions/checkout@v3
