--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Crawl news
 
-#Run automatically every 24 hours
+#Run automatically every hour
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 * * * *"
 
   # This command allows to run the Action automatically from the Actions tab.
   workflow_dispatch:
